# fscars

./: .gitignore  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_adapter.yml
.github/workflows/: ci.yml  gif.yml  launch-gif.yml  release.yml
assets/: demo.tape
cookbook/: __init__.py
cookbook/scars/: README.md  __init__.py  _template.py  avoid_negative_framing.py  csv_encoding.py  import_aware_imports.py  large_write_review.py  subagent_coverage_report.py  utc_timestamps.py
docs/: advanced_validation.md  codex_integration_plan.md  cookbook_import_aware.md
fscars/: __init__.py  dashboard.py  run_hook.py
fscars/adapters/: __init__.py  base.py
fscars/adapters/claude_code/: __init__.py  adapter.py
fscars/adapters/codex/: __init__.py  adapter.py
fscars/cli/: __init__.py  main.py
fscars/cli/commands/: __init__.py  _classifier_loader.py  audit.py  dashboard.py  disable.py  doctor.py  init.py  list_cmd.py  log_cmd.py  stats.py  validate.py
fscars/core/: __init__.py  engine.py  fire.py  log.py  opp_log.py  payload.py  scar.py  store.py
fscars/io/: __init__.py  safe_jsonl.py
fscars/validation/: __init__.py  cross_link.py  llm.py  outcome.py  rules.py
scripts/: render_launch_gif.py
tests/: conftest.py  test_adapter_claude_code.py  test_adapter_codex.py  test_cookbook_import_aware.py  test_cookbook_scars.py  test_dashboard.py  test_engine.py  test_engine_load_from_dir.py  test_log.py  test_opp_log.py  test_payload.py  test_run_hook.py  test_scar.py
tests/cli/: test_init_claude_code.py  test_init_codex.py  test_new_commands.py
tests/io/: test_safe_jsonl.py
tests/validation/: test_cross_link.py  test_llm.py  test_outcome.py  test_rules.py
